--- a/electionSeries/lp-2/electionbyTweets.ipynb
+++ b/electionSeries/lp-2/electionbyTweets.ipynb
@@ -2560,6 +2560,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finnish"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
