--- a/reviewsSeries/lp-2/wine.ipynb
+++ b/reviewsSeries/lp-2/wine.ipynb
@@ -42,6 +42,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1 GPU(s) available.\n",
+      "We will use the GPU: NVIDIA GeForce RTX 4060 Laptop GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch \n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda')\n",
+    "    print('There are %d GPU(s) available.' % torch.cuda.device_count())\n",
+    "    print('We will use the GPU:', torch.cuda.get_device_name(0))\n",
+    "else:\n",
+    "    print('No GPU available, using the CPU instead.')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
