--- a/computerVisionSeries/lp-1/ctScanBrainTumor.ipynb
+++ b/computerVisionSeries/lp-1/ctScanBrainTumor.ipynb
@@ -1529,10 +1529,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Available cuda = True\n",
+      "\n",
+      "GPUs availables = 1\n",
+      "\n",
+      "Current device = 0\n",
+      "\n",
+      "Current Device location = <torch.cuda.device object at 0x7fc16ea09c90>\n",
+      "\n",
+      "Name of the device = NVIDIA GeForce RTX 4060 Laptop GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "print(f'\\nAvailable cuda = {torch.cuda.is_available()}')\n",
+    "\n",
+    "print(f'\\nGPUs availables = {torch.cuda.device_count()}')\n",
+    "\n",
+    "print(f'\\nCurrent device = {torch.cuda.current_device()}')\n",
+    "\n",
+    "print(f'\\nCurrent Device location = {torch.cuda.device(0)}')\n",
+    "\n",
+    "print(f'\\nName of the device = {torch.cuda.get_device_name(0)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('cpu_compiler', '/usr/lib/llvm-16/bin/clang'),\n",
+       "             ('cuda_compute_capabilities',\n",
+       "              ['sm_35', 'sm_50', 'sm_60', 'sm_70', 'sm_75', 'compute_80']),\n",
+       "             ('cuda_version', '11.8'),\n",
+       "             ('cudnn_version', '8'),\n",
+       "             ('is_cuda_build', True),\n",
+       "             ('is_rocm_build', False),\n",
+       "             ('is_tensorrt_build', True)])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.sysconfig.get_build_info()"
+   ]
   },
   {
    "cell_type": "code",
